@@ -1201,12 +1201,12 @@ and send the QRCode via a mailer.
 
 
             ### TEMPORARILY DISABLED
-            print_error("This module is currently disabled as spoofmytextmessage.com is currently experiencing issues. As soon as it is working again or I can rework the module, this will remain disabled.")
-            raw_input("Press {return} to connect to the main menu.")
-            #try:
-            #    module_reload(src.sms.sms)
-            #except:
-            #    import src.sms.sms
+            #print_error("This module is currently disabled as spoofmytextmessage.com is currently experiencing issues. As soon as it is working again or I can rework the module, this will remain disabled.")
+            #raw_input("Press {return} to connect to the main menu.")
+            try:
+                module_reload(src.sms.sms)
+            except:
+                import src.sms.sms
 
         # Main Menu choice 11: Third Party Modules
         if main_menu_choice == '11':
