@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="221251"
-
-SUBJECT="Movistar: publicidad nieve"
-
-BODY="MS Publi:Entra en www.apuntatealanieve.es y participa en el sorteo de 50 packs de 2 forfaits para 2 dias en cualquier estacion de Aramon. Valido hasta el 2/03"
