@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="609"
-
-SUBJECT="Movistar: publicidad verano internet"
-
-BODY="Movistar publi: Este verano sigue en Internet con el Kit INTERNET MOVIL PREPAGO.Si lo usas pagas,si no lo usas no pagas.Consiguelo en tu distribuidor movistar"
