@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="teabla"
-
-SUBJECT="teabla: moviles gratis"
-
-BODY="Rebajas exclusivas para ti en teabla: Llevate el Nokia 2680 por 13000 puntos y 0 euros.Solo hasta 15/02/10. Registrate en www.teabla.es 902203050"
