@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="7412"
-
-SUBJECT="TMB: temps espera"
-
-BODY="0488-Av de Madrid-Vallespir Linia Temps *54  5 min* Temps aproximat. TMB Gràcies"
