@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="221251"
-
-SUBJECT="Movistar: publicidad ROCKRIO"
-
-BODY="Movistar Publi:Vive ROCK&RIO al maximo con Movistar.Si eres de Telefonica o Movistar consigue tus entradas en movistar.es/rockinrio.SORTEAMOS 1.000. Hsta 19/04"
