@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="2255"
-
-SUBJECT="Movistar: publicidad tarifa llamada"
-
-BODY="Movistar info: Recuerda q la Tarifa Diaria q ya disfrutas te permite llamar en Europa por slo 0,28e/min+0,57 (estb llam)+1,16e cada dia q la utilices.+inf 609"
