@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="Movistar"
-
-SUBJECT="Movistar: oferta otoño"
-
-BODY="Publi:Hable en otoño 100 min y pague solo 1 hasta 9 nov cualquier destino nac(no incl establ)Alta 3,45e(iva incl)Y por 1,18 (iva incl)SMS al 50%.Alta en el 1200"
