@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="474"
-
-SUBJECT="Yavoy: regalo yavoy"
-
-BODY="Publi:GRATIS tu primer Yavoy! Llama al 474, elige Yavoy preferido y nosotros te lo regalamos!D.Bisbal,Guetta,Baute,5a estacion...p.llam:0.15+0.30e/min"
