@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="221252"
-
-SUBJECT="Movistar: publicidad aramon"
-
-BODY="movistar publi:Envia ARAMON al 7213 y consigue tu forfait ARAMONCLUB MOVISTAR con ventajas exclusivas y descuento hasta 20%.+info aramon.es"
