@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="7770"
-
-SUBJECT="Tu Banco: visa disponible en oficina"
-
-BODY="TARGETA VISA JA DISPONIBLE A OFICINA DE RIERA BLANCA/TU BANCO.0000 LA RIERA BLANCA"
