@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="M.vivienda"
-
-SUBJECT="Ministerio vivienda: incidencia pago"
-
-BODY="Ministerio de Vivienda. Tienes una incidencia en el pago de tu RBE. Motivo NO EXISTE VERIFICACION PAGO DEL ALQUILER  info en www.alquilerjoven.es"
