@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="609"
-
-SUBJECT="Movistar: publicidad navidad"
-
-BODY="Movistar Info:Cada año, las personas para las que eres importante te felicitan la Navidad.En movistar nos sumamos a ellas deseandote Feliz Navidad y Feliz 2010."
