@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="86323663"
-
-SUBJECT="Vodafone: publicidad nuevo contrato"
-
-BODY="VF Info: El 1 de diciembre 2010 entra en vigor la nueva clausula 11 de las condiciones generales del contrato. Para informarte y oposicion consulta www.vodafone.es."
