@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="609"
-
-SUBJECT="Movistar: publicidad nokia gratis"
-
-BODY="Movistar publi:por ser cliente Movistar tiene a 0 Euros un Nokia X6 con alta Tarifa Plana Internet movil Premium.Ms info en 609.Max 30.000 canjes hasta 31/3."
