@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="2255"
-
-SUBJECT="Movistar: publicidad tarifa sms"
-
-BODY="Movistar publi: Con la Tarifa Diaria Europa los sms en Europa a 0,10e/sms y ahora las llamadas recibidas a 0e/min hasta el 12/4. ALTA Gratis llamando al 2255"
