@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="5039"
-
-SUBJECT="MRW: pedido no entregado"
-
-BODY="MRW INFORMA: SU ENVIO 01111/1111100 NO HA PODIDO SER ENTREGADO POR AUSENCIA DEL DESTINATARIO. ROGAMOS CONTACTE CON SU FRANQUICIA MRW EN EL TLF. 933255454"
