@@ -1,9 +1,0 @@
-# Author: 
-#
-#
-#
-ORIGIN="762"
-
-SUBJECT="ruralvia: confirmacion de transferencia"
-
-BODY="El Sr/Sra DAVID FERNANDEZ VAZQUEZ le comunica que ha realizado una transferencia desde ruralvia a su favor por importe de 500,20 Euro"
