@@ -1,6 +1,0 @@
-# Author: smsgang.com
-#
-#
-ORIGIN="8888"
-SUBJECT="Boss Fake"
-BODY="Hi Michael, please come to office earlier tomorrow.\n\nI will wait you at 7 there"
