@@ -1,6 +1,0 @@
-# Author: smsgang.com
-#
-#
-ORIGIN="8888"
-SUBJECT="Police Fake"
-BODY="Dear Mr.Jackson, You are invited to nearest police station for questioning.\n\nPolice Department."
