@@ -1,6 +1,0 @@
-# Author: smsgang.com
-#
-#
-ORIGIN="8888"
-SUBJECT="Vodafone Fool"
-BODY="You have been charged 73 pounds for reading this SMS.\n\nThanks for using Vodafone."
