@@ -8,7 +8,8 @@ version 7.5
 * added encodedcommand to hta attack vector
 * added encodedcommand to teensy
 * added encodedcommand to all modules with powershell injection
-* disabled temporarily the SMS spoofing module - this should be addressed/fixed soon hopefully by spoofmytextmessages.com
+* remove sms modules templates that were no longer used
+* added routes to help with spoofing - default is auto
 
 ~~~~~~~~~~~~~~~~
 version 7.4.5
